<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/action_house_activities"
        android:title="@string/house_activities">

        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/shoppingFragment"
                    android:title="@string/shopping_list"
                    android:checkable="true"
                    app:showAsAction="ifRoom"
                    android:icon="@drawable/ic_shopping_cart_24" />

                <item
                    android:id="@+id/cleaningFragment"
                    android:title="@string/cleaning"
                    android:checkable="true"
                    app:showAsAction="ifRoom"
                    android:icon="@drawable/ic_cleaning_services_24" />

            </group>

        </menu>
    </item>

</menu>